Stretch: Implemented fixed header with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,9 @@ p {
   margin: 0 auto;
 }
 nav {
+  position: fixed;
+  width: 100%;
+  opacity: 0.9;
   background: #F6F6F6;
   display: flex;
   flex-direction: column;
@@ -195,6 +198,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 100px;
 }
 .home .intro img {
   border-radius: 5px;
