--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  padding-top: 100px;
 
   .intro {
 
