--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,7 @@
 nav {
+    position: fixed;
+    width: 100%;
+    opacity: .9;
     background: @nav-bg;
    .flex(column, center, center);
    padding: 13px 0 10px;
